tests/errors/attribute-meta-type-domain.ari
meta fn choose(input: type) -> type {
}

@choose(i64)
fn value() -> i64 {
  return 1;
}

fn main() -> i64 {
  return value();
}
